// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`containers/Buckets/Summarize > ConfigureAppearance > should not render buttons when there are files out there 1`] = `
<div
  class="Summarize-root"
/>
`;

exports[`containers/Buckets/Summarize > ConfigureAppearance > should render both links 1`] = `
<div
  class="Summarize-root"
>
  <div>
    Open the editor to author a quilt_summarize.json file. Upon saving, a package revision dialog will show up, letting you add that file to the package.
    <hr />
    <a
      href="file: b/n/some/path/quilt_summarize.json {"add":"quilt+s3://b#package=n&path=some%2Fpath%2Fquilt_summarize.json","edit":true}"
    >
      <div
        id="button"
      >
        Configure Summary
      </div>
    </a>
  </div>
  <div>
    Open the editor to author a README file. Upon saving, a package revision dialog will show up, letting you add that file to the package.
    <hr />
    <a
      href="file: b/n/some/path/README.md {"add":"quilt+s3://b#package=n&path=some%2Fpath%2FREADME.md","edit":true}"
    >
      <div
        id="button"
      >
        Add README
      </div>
    </a>
  </div>
</div>
`;

exports[`containers/Buckets/Summarize > ConfigureAppearance > should render quilt_summarize link 1`] = `
<div
  class="Summarize-root"
>
  <div>
    Open the editor to author a quilt_summarize.json file. Upon saving, a package revision dialog will show up, letting you add that file to the package.
    <hr />
    <a
      href="file: b/n/quilt_summarize.json {"add":"quilt+s3://b#package=n&path=quilt_summarize.json","edit":true}"
    >
      <div
        id="button"
      >
        Configure Summary
      </div>
    </a>
  </div>
</div>
`;

exports[`containers/Buckets/Summarize > ConfigureAppearance > should render readme link 1`] = `
<div
  class="Summarize-root"
>
  <div>
    Open the editor to author a README file. Upon saving, a package revision dialog will show up, letting you add that file to the package.
    <hr />
    <a
      href="file: b/n/README.md {"add":"quilt+s3://b#package=n&path=README.md","edit":true}"
    >
      <div
        id="button"
      >
        Add README
      </div>
    </a>
  </div>
</div>
`;
